[tool.poetry]
name = "kaggle-competitions"
version = "0.1.0"
description = ""
authors = ["Alberto Caroli"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "kaggle_competitions"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
datasets = "^2.5.1"
tokenizers = "0.12.1"
sentencepiece = "^0.1.97"
pandas = "^1.5.0"
protobuf = "3.20"

[tool.poetry.group.dev.dependencies]
transformers = "^4.22.1"
scikit-learn = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
